Move remote maven index from old into current cache if available
conditions:

 - both cache folders share the same parent
 - the cache folder is from an older release
 - the index itself is still somewhat up to date
 - current NB instance is not a dev build